--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
 language: go
 go:
-  - "1.10"
+  - "1.11.x"
 before_install:
-  - go get github.com/alecthomas/kingpin
-  - go get github.com/fatih/color
-  - go get github.com/ghodss/yaml
-  - go get github.com/pmezard/go-difflib/difflib
-  - go get github.com/xeipuuv/gojsonpointer
-  - go get golang.org/x/crypto/openpgp
   - go get golang.org/x/tools/cmd/goimports
-script: make test-unit
+script: env GO111MODULE=on make test-unit
