--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
   - "1.11.x"
 before_install:
   - go get golang.org/x/tools/cmd/goimports
+  - sudo apt-get install -y libssl1.0.0 libssl-dev
   - wget https://mirror.openshift.com/pub/openshift-v3/clients/3.11.43/linux/oc.tar.gz
   - tar -xzvf oc.tar.gz
   - export PATH=$PATH:$PWD
