--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ go:
 before_install:
   - go get golang.org/x/tools/cmd/goimports
   - sudo apt-get install -y libssl1.0.0 libssl-dev
+  - cd /lib/x86_64-linux-gnu
+  - sudo ln -s libssl.so.1.0.0 libssl.so.10
+  - sudo ln -s libcrypto.so.1.0.0 libcrypto.so.10
   - wget https://mirror.openshift.com/pub/openshift-v3/clients/3.11.43/linux/oc.tar.gz
   - tar -xzvf oc.tar.gz
   - export PATH=$PATH:$PWD
