--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,7 @@ go:
   - "1.11.x"
 before_install:
   - go get golang.org/x/tools/cmd/goimports
-  - sudo apt-get install -y libssl1.0.0 libssl-dev
-  - cd /lib/x86_64-linux-gnu
-  - sudo ln -s libssl.so.1.0.0 libssl.so.10
-  - sudo ln -s libcrypto.so.1.0.0 libcrypto.so.10
-  - cd -
-  - wget https://mirror.openshift.com/pub/openshift-v3/clients/3.11.43/linux/oc.tar.gz
+  - wget https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
   - tar -xzvf oc.tar.gz
   - export PATH=$PATH:$PWD
 
