--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
 before_install:
   - go get golang.org/x/tools/cmd/goimports
   - wget https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
-  - tar -xzvf oc.tar.gz
-  - export PATH=$PATH:$PWD
+  - tar -xzvf openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
+  - export PATH=$PATH:$PWD/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit
 
 script: env GO111MODULE=on make test
