--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: go
 go:
   - "1.11.x"
 before_install:
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.17.1
   - go get golang.org/x/tools/cmd/goimports
   - wget https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
   - tar -xzvf openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
@@ -12,4 +13,6 @@ before_install:
   - sudo cat /etc/default/docker
   - sudo service docker restart
 
-script: env GO111MODULE=on make test
+script:
+  - env GO111MODULE=on make lint
+  - env GO111MODULE=on make test
