--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ before_install:
   - wget https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
   - tar -xzvf openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz
   - export PATH=$PATH:$PWD/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit
-  - sudo sed -i "s/\DOCKER_OPTS=\"/DOCKER_OPTS=\"--insecure-registry=172.16.0.0\/12 /g" /etc/default/docker
-  - sudo cat /etc/default/docker
+  - sudo sed -i 's/\"registry-mirrors\"/\"insecure-registries\":\[\"172.30.0.0\/16\"], \"registry-mirrors\"/g' /etc/docker/daemon.json
+  - sudo cat /etc/docker/daemon.json
   - sudo service docker restart
+  - sudo docker info
 
 script:
   - env GO111MODULE=on make lint
