Use "oc get --export" instead of deprecated "oc export"
This change also required to run the export through list assembly, which
fixes #149 and #188 as well.

--- a/internal/test/fixtures/export/rolebinding-generate-name.yml
+++ b/internal/test/fixtures/export/rolebinding-generate-name.yml
@@ -1,9 +1,6 @@
-apiVersion: template.openshift.io/v1
-kind: Template
-metadata:
-  creationTimestamp: null
-  name: tailor
-objects:
+apiVersion: v1
+kind: List
+items:
 - apiVersion: authorization.openshift.io/v1
   groupNames: null
   kind: RoleBinding
