--- a/internal/test/fixtures/export/is.yml
+++ b/internal/test/fixtures/export/is.yml
@@ -1,9 +1,6 @@
-apiVersion: template.openshift.io/v1
-kind: Template
-metadata:
-  creationTimestamp: null
-  name: tailor
-objects:
+apiVersion: v1
+kind: List
+items:
 - apiVersion: image.openshift.io/v1
   kind: ImageStream
   metadata:
