--- a/internal/test/fixtures/item-applied-config/dc-platform-annotation-applied.yml
+++ b/internal/test/fixtures/item-applied-config/dc-platform-annotation-applied.yml
@@ -3,7 +3,8 @@ kind: DeploymentConfig
 metadata:
   name: foo
   annotations:
-    tailor.opendevstack.org/applied-config: '{"/spec/template/spec/containers/0/image": "bar/foo:latest"}'
+    kubectl.kubernetes.io/last-applied-configuration: >
+      {"apiVersion":"v1","kind":"DeploymentConfig","metadata":{"name":"foo"},"spec":{"template":{"spec":{"containers":[{"image":"bar/foo:latest"}]}}}}
 spec:
   replicas: 1
   selector:
