Do not trim all annotations during export by default
Closes #203.

--- a/internal/test/fixtures/export/is.yml
+++ b/internal/test/fixtures/export/is.yml
@@ -7,6 +7,8 @@ items:
     annotations:
       description: Keeps track of changes in the application image
       openshift.io/image.dockerRepositoryCheck: 2018-08-07T12:32:24Z
+      openshift.io/generated-by: OpenShiftNewApp
+      kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"v1","kind":"ImageStream","metadata":{"annotations":{"foo":"bar"}}}'
     creationTimestamp: null
     generation: 560
     labels:
