--- a/internal/test/golden/export/is.yml
+++ b/internal/test/golden/export/is.yml
@@ -4,6 +4,9 @@ objects:
 - apiVersion: image.openshift.io/v1
   kind: ImageStream
   metadata:
+    annotations:
+      description: Keeps track of changes in the application image
+      openshift.io/generated-by: OpenShiftNewApp
     labels:
       app: foo-bar
     name: bar
