Replace only whole words with TAILOR_NAMESPACE
As https://github.com/opendevstack/ods-provisioning-app/issues/521 has
shown, the namespace replacement is too broad.

Right now, I mainly see the following use-cases:

* Replacement in URLs (e.g. `BuildConfig` `.spec.source.git.uri`)
* Replacement in image references (e.g. `DeploymentConfig`
`.spec.template.spec.containers[*].image`)
* Replacement of full field value (e.g. `BuildConfig` `.spec.strategy.dockerStrategy.from.namespace`)
* Internal routes such as `http://service-foo.namespace-bar.svc:8080`

All those use cases are satisfied by matching only whole words.

On the other hand, it is unlikely people want to replace partial words -
the shorter the namespace, the more likely that "error" occurs.

As a further improvement, I consider "-" not as word boundaries so that
short namespaces (such as "ods") do not trip up labels (such as
"ods-provisioning-app").

--- a/internal/test/fixtures/export/bc.yml
+++ b/internal/test/fixtures/export/bc.yml
@@ -4,6 +4,10 @@ items:
 - apiVersion: build.openshift.io/v1
   kind: BuildConfig
   metadata:
+    labels:
+      app: foo-deviations
+      component: foo-dev-monitoring
+      dotted: some.foo-dev.thing
     name: bar
   spec:
     nodeSelector: null
@@ -17,7 +21,7 @@ items:
     source:
       git:
         ref: master
-        uri: https://github.com/foo/bar.git
+        uri: https://github.com/foo-dev/bar.git
       type: Git
     strategy:
       dockerStrategy:
