Enable fewer components in OpenShift

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,10 @@ jobs:
           make lint
       -
         name: Setup OpenShift
-        uses: manusa/actions-setup-openshift@v1.0.5
+        uses: manusa/actions-setup-openshift@v1.1.0
         with:
           oc version: 'v3.11.0'
+          enable: 'centos-imagestreams,persistent-volumes,registry,router'
           github token: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Run tests
